# embedding_dataset

./: .gitignore  README.md  pyproject.toml
configs/: local.toml  local_mini.toml  vertex.toml  vertex_mini.toml
src/: generate_all_languages.py  generate_data.py  generate_from_classification_task.py  generate_from_retrieval_task.py  generate_from_text_matching_long.py  generate_from_text_matching_short.py  generate_from_unit_triple.py  generate_retrieval_tasks.py  generate_tasks.py  generate_text_classification_tasks.py  generate_text_matching_tasks_long.py  generate_text_matching_tasks_short.py  generators.py  inspect_data.py  main.py  post_processing.py  utils.py  variables.py
